--- a/app/less/helper/app.utilities.less
+++ b/app/less/helper/app.utilities.less
@@ -85,6 +85,9 @@ a.text-orange {color: #ef9630}
 .text-md{font-size: @font-size-base + 2}
 .text-sm{font-size: @font-size-small + 1 }
 .text-xs{font-size: @font-size-small - 2}
+
+.text-11{font-size:11px}
+
 .text-ellipsis{
   display: block;
   white-space: nowrap;
