--- a/app/less/web/booking.less
+++ b/app/less/web/booking.less
@@ -463,6 +463,59 @@
     width: 50%;
     height: 100%;
   }
+
+  &.flight-payment {
+    .bank-tranfer-choose {
+      font-size: 13px;
+      line-height: 23px;
+    }
+
+    .bg-warn-msg {
+      background-color: #ffffcc;
+      line-height: 24px;
+    }
+
+    .bank-account-list {
+      .bank-item {
+        padding-bottom: 25px;
+        border-bottom: 1px dashed #e5e5e5;
+
+        // &:last-child {
+        //   padding-bottom: 0;
+        //   border-bottom: 0;
+        // }
+
+        li {
+          label {
+            margin-bottom: 0;
+            width: 146px;
+          }
+
+          span {
+            display: inline-block;
+            margin-left: 5px;
+          }
+        }
+      }
+    }
+
+    .mandiri-token {
+      ul {
+        li {
+          label {
+            .m-b-none;
+            width: 120px;
+          }
+
+          > div {
+            line-height: 18px;
+            width: 100px;
+            font-size: 11px;
+          }
+        }
+      }
+    }
+  }
 }
 
 
