--- a/app/css/e-ticket.css
+++ b/app/css/e-ticket.css
@@ -8231,6 +8231,9 @@ a.text-orange {
 .text-xs {
   font-size: 9px;
 }
+.text-11 {
+  font-size: 11px;
+}
 .text-ellipsis {
   display: block;
   white-space: nowrap;
