--- a/app/less/helper/form.less
+++ b/app/less/helper/form.less
@@ -169,6 +169,9 @@
       font-family: "Gotham Book";
       font-size: 11px;
     }
+    input {
+      margin-bottom: 4px
+    }
 
     input,
     select {
@@ -221,6 +224,14 @@
       width: 320px;
     }
 
+    &.medium {
+      width: 300px
+    }
+
+    &.order-number {
+      width: 340px;
+    }
+
     &.phone-number {
       width: 265px;
     }
@@ -253,6 +264,10 @@
 
       select {
         cursor: pointer !important
+      }
+
+      &.bank {
+        width: 100px
       }
 
       // &:after {
