--- a/app/less/web/flights.less
+++ b/app/less/web/flights.less
@@ -425,6 +425,7 @@
   }
 }
 
+.flight-payment-step-4,
 .flight-payment-step-5 {
   font-size: 13px;
 
@@ -471,6 +472,12 @@
   .ticket-has-created {
     background-color: #f4f4f2;
     padding: 35px;
+    font-size: 13px;
+  }
+
+  .waiting-ticket {
+    background-color: #f4f4f2;
+    padding: 20px 30px 31px 30px;
     font-size: 13px;
   }
 
